# soapp

./: CMakeLists.txt  README.md  soapp.pc.in  sopp.pc.in
demo/: CMakeLists.txt  Gender.hpp  demo_array.cpp  demo_tuple.cpp
include/soapp/: Array.hpp  Array_impl.hpp  nth_iterator.hpp  tuple.hpp  tuple_impl.hpp  zip_iterator.hpp  zip_iterator_impl.hpp
include/soapp/tuple_helpers/: nth_value.hpp  number_of_items.hpp  tuple_loop.hpp  tuple_loop_impl.hpp  typedefs.hpp
